@@ -223,7 +223,7 @@ DADatabase::get_record(om_docid did) const
     return r;
 }
 
-IRDocument *
+OmDocument *
 DADatabase::open_document(om_docid did) const
 {
     Assert(opened);
